<resources>
    <string name="app_name">Assistant diabétique</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">ENSIAS PFA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accueil">Accueil</string>
    <string name="menu_gtaches">Gestionnaire de tâches</string>
    <string name="menu_repas">Repas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">Bienvenue !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splash_msg">Je suis un assistant diabétique\n Pour être utile, j\'ai besoin de mieux te connaître</string>
    <string name="register">Enregistrer</string>
    <string name="blood_sugar_level">Taux de glycémie</string>
    <string name="measure_after_repas">Mesure plus de deux heures après un repas</string>
    <string name="title_task">Titre de la tâche</string>
    <string name="short_description">Brève description</string>
    <string name="long_desc">Description détaillée</string>
    <string name="every_day">Chaque jour</string>
    <string name="a">à</string>
    <string name="repeat_task">Répéter la tâche chaque</string>
    <string name="days">jours</string>
    <string name="name_meal">Nom du repas</string>
    <string name="amount_sugar">Quantité du sucre(g)</string>
    <string name="choose_format">Veuillez choisir le format de fichier</string>
    <string name="export">Exporter</string>
    <string name="task_per">Les tâches permanentes</string>
    <string name="task_exp">Les tâches exceptionnelles</string>
    <string name="current_tasks">Tâches en cours</string>
    <string name="completed_tasks">Tâches terminées</string>
    <string name="meal">Repas</string>
    <string name="measure">Mesure</string>
    <string name="meals_day">Les repas d\'aujourd\'hui</string>
    <string name="the_tasks">Les tâches</string>
    <string name="tasks_perc_completion">La liste suivante indique les tâches et le pourcentage de leur réalisation</string>
    <string name="blood_sugar_levels">Les glycémies</string>
    <string name="nb_measure_day">Nombre de lectures de glycémie par jour</string>
    <string name="nb_hyper_day">Nombre d\'hyperglycémies par jour</string>
    <string name="nb_hypo_day">Nombre d\'hypoglycémies par jour</string>
    <string name="meals">Les repas</string>
    <string name="nb_meals_day">Nombre de repas par jour</string>
    <string name="q_sugre_day">Quantité de sucre dans les repas</string>
    <string name="next">suivant</string>
    <string name="share">Partager</string>
    <string name="tip">Astuce</string>
    <string name="share_file">Partage le fichier</string>
    <string name="add_task_per">Ajouter une tâche permanente</string>
    <string name="add">Ajouter</string>
    <string name="hyper">L\'hyperglycémie</string>
    <string name="hypo">L\'hypoglycémie</string>
    <string name="measure_after_meal">Mesurer la glycémie 2h après chaque repas</string>
    <string name="titre_hyper_task">🚨La mesure de glycémie est supérieure à 250 mg/dl!</string>
    <string name="short_desc_hyper_task">L\'\'hyperglycémie est très dangereuse pour l\'\'organisme, il faut agir vite !</string>
    <string name="titre_hypo_task">🚨La mesure de glycémie est inférieure à 70 mg/dl</string>
    <string name="short_desc_hypo_task">L\'\'hypoglycémie est très dangereuse, il faut manger du sucre pour ne pas perdre connaissance !</string>
    <string name="title_blood_sugar_high">🔔La glycémie est élevée que la normale!</string>
    <string name="short_desc_blood_sugar_high">Selon votre FSI, il est conseillé de prendre %fU d\'\'insulines.</string>
</resources>