<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_task"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            >

            <EditText
                android:id="@+id/edit_title_tache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_description"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            >

            <EditText
                android:id="@+id/edit_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/long_desc"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            >

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textMultiLine"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_every_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:checked="true"
                android:text="@string/every_day"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/linear_time">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/a"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edit_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="number"

                   android:maxLength="2"

                    android:text="00"
                    android:hint="00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <EditText
                    android:id="@+id/edit_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="number"
                    android:text="00"
                    android:hint="00"
                    android:maxLength="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_every_nday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/repeat_task"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            <EditText
                android:id="@+id/edit_nb_jours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1"
                android:ems="2"
                android:gravity="center"
                android:maxLength="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>