<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:background="@color/fragment_bg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="10dp"
                >
                <include
                    android:id="@+id/layout_courbe"
                    layout="@layout/layout_courbe_glucose"
                    android:layout_width="match_parent"
                    android:layout_height="220dp" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_tasks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />


                <com.anasdarai.assistant_diabtique.views.ListViewFullHeight
                    android:id="@+id/list_tachesEnCours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:divider="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/completed_tasks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <com.anasdarai.assistant_diabtique.views.ListViewFullHeight
                    android:id="@+id/list_tachesTerminees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:divider="@null" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_add_32"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        app:layout_constraintEnd_toEndOf="@+id/fab_add"
        android:orientation="vertical"
        android:id="@+id/linear_add"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|center_vertical"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/teal_700"
                app:cardCornerRadius="10dp"
                >
                <TextView
                    android:textColor="#ecf0f1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/measure"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_mesure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_mesure"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|center_vertical"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/teal_700"
                app:cardCornerRadius="10dp"

                android:layout_weight="1"
                >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ecf0f1"
               android:gravity="center"
                android:padding="5dp"
                android:text="@string/meal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_repas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_repas"
                app:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>